classDiagram
    class FragmentActivity {
        +RicorrenzaViewModel viewModel
    }

    class RicorrenzaViewModel {
        +getRicorrenzeDelGiorno()
        +getRicorrenzeReligiose()
        +getRicorrenzeLaiche()
        +cercaRicorrenze()
        +eseguiRicercaAvanzata()
        +insert()
        +update()
        +delete()
        +RicorrenzaRepository repository
    }

    class RicorrenzaRepository {
        +getRicorrenzeDelGiorno()
        +getRicorrenzeReligiose()
        +getRicorrenzeLaiche()
        +cercaRicorrenzePerNome()
        +ricercaAvanzata()
        +ricercaAvanzataAsync()
        +insert()
        +update()
        +delete()
        +DateParsing()
        +ResultMapping()
        +ExecutorService()
        +RicorrenzaDao dao
    }

    class RicorrenzaDao {
        +getRicorrenzeConTipo()
        +getRicorrenzeDelGiorno()
        +getRicorrenzeDelGiornoPerTipo()
        +getRicorrenzePerTipo()
        +getRicorrenzaById()
        +cercaRicorrenzePerNome()
        +ricercaAvanzata()
        +ricercaAvanzataPaginata()
        +getAllRicorrenze()
        +getTotalItemCount()
        +insert()
        +update()
        +delete()
        +SQLiteDatabase db
    }

    class SQLiteDatabase {
    }

    %% Relazioni tra classi
    FragmentActivity --> RicorrenzaViewModel : usa
    RicorrenzaViewModel --> RicorrenzaRepository : usa
    RicorrenzaRepository --> RicorrenzaDao : usa
    RicorrenzaDao --> SQLiteDatabase : interagisce

    %% Relazioni aggiuntive per influenzare il layout
    FragmentActivity -- RicorrenzaRepository : dipendenza
    FragmentActivity -- RicorrenzaDao : dipendenza
    RicorrenzaViewModel -- SQLiteDatabase : dipendenza
